[tool.poetry]
name = "pymanzoni"
version = "2022.1"
description = "Python GUI interface to Manzoni"
authors = ["Robin Tesse <robin.tesse@ulb.be>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = ">3.8.1 <3.10"
PySide2 = "^5.15.2"
lmfit = "^1.0.3"
mpld3 = "^0.5.8"
yapf = "^0.32.0"
mypy = "^0.812"
flake8 = "^4.0.1"
georges = { path = "libs/georges/", develop = true }

Sphinx = {version = "^5.0.1"}
sphinx-material = {version = "^0.0.35"}
sphinx-automodapi = {version = "^0.14.1"}
sphinxcontrib-bibtex = {version = "^2.4.2"}
sphinx-copybutton = {version = "^0.5.0"}
sphinx-autobuild = {version = "^2021.3.14"}
sphinx-rtd-theme = {version = "^1.0.0"}
m2r2 = {version = "^0.3.2"}
pandoc = {version = "^2.2"}
nbsphinx = {version = "^0.8.9"}
PySideFlask = "^2.0"
toml = "^0.10.2"
pyinstaller = "^5.2"

[tool.poetry.dev-dependencies]


[tool.poetry.extras]
sphinx = [
    "sphinx",
    "sphinx-material",
    "sphinx-automodapi",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
    "m2r2",
    "pandoc",
    "nbsphinx",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
