[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
string_normalization = true
magic_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true

[tool.poetry]
name = "pymanzoni"
version = "2022.1"
description = "Python GUI interface to Manzoni"
authors = ["Robin Tesse <robin.tesse@ulb.be>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = ">3.8.1 <3.10"
PySide2 = "5.15.2"
mpld3 = "0.5.8"
georges = { path = "libs/georges/", develop = true }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
black = {extras = ["jupyter"], version = "23.1.0"}
pylint = "2.15.2"
flake8 = "6.0.0"
isort = "5.12.0"
flake8-pyproject = "1.2.3"
mypy = "1.1.1"
coverage = {extras = ["toml"], version = "7.2.2"}
pre-commit = "2.21.0"

[tool.poetry.group.docs.dependencies]
sphinx = "6.1.3"
sphinx-material =  "0.0.35"
sphinx-automodapi =  "0.15.0"
sphinxcontrib-bibtex =  "2.5.0"
sphinx-copybutton =  "0.5.1"
sphinx-autobuild =  "2021.3.14"
m2r2 =  "0.2.8"
pandoc =  "2.3"
nbsphinx =  "0.9.1"
jupyter-sphinx = "0.4.0"
jupyter-server-mathjax = "0.2.6"
cairosvg = "2.7.0"
sphinxcontrib-svg2pdfconverter = {extras = ["cairosvg"], version = "1.2.2"}
sphinx-tabs = "3.4.1"
sphinx-rtd-theme = "1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
